FIX: Removed slight horizontal scroll from smaller screen sizes

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -37,15 +37,17 @@ body {
     max-width: 750px;
     max-height: 530px;
     padding: 15px;
-    margin-top: 2px;
+    margin-top: 15px;
     margin-left: auto;
     margin-right: auto;
     box-sizing: border-box;
 }
 
 .board-headline {
-    width: 100%;
-    margin: 5px;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 5px;
 }
 
 #number-input-section {
